# rust-oauth2-traits

./: Cargo.toml  LICENSE  README.md
oauth2_traits_macros/: Cargo.toml
oauth2_traits_macros/src/: lib.rs  scopes.rs  simple_generator.rs
src/: lib.rs
src/authorization_server/: auth_server.rs  auth_server_tests.rs  client_repository.rs  mod.rs  uuid_generator.rs
src/client/: client.rs  mod.rs
